[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/UI/boards/Brown_Board_02.png" type="Texture" id=1]
[ext_resource path="res://scenes/UI/upgrade_panel/UpgradePanel.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/Fibberish v1.0/fibberish.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/UI/check_icon/hover.png" type="Texture" id=4]
[ext_resource path="res://assets/UI/check_icon/pressed.png" type="Texture" id=5]
[ext_resource path="res://assets/UI/check_icon/normal.png" type="Texture" id=6]
[ext_resource path="res://assets/UI/buttons/plus/normal.png" type="Texture" id=7]
[ext_resource path="res://assets/UI/buttons/plus/highlight.png" type="Texture" id=8]
[ext_resource path="res://assets/UI/buttons/plus/pressed.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=1]
size = 42
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 22
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[node name="UpgradePanel" type="TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
expand = true
stretch_mode = 6
script = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -145.0
margin_top = -131.5
margin_right = 145.0
margin_bottom = -106.5
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "Upgrade"
align = 1
valign = 1

[node name="Points" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -145.0
margin_top = -82.0
margin_right = 145.0
margin_bottom = -57.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
text = "Skill Points: 0"
align = 1
valign = 1

[node name="HSpeed" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -141.0
margin_top = -77.5
margin_right = 139.0
margin_bottom = -34.5
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
text = "Human Speed:
Lvl 0"
align = 1
valign = 1

[node name="HspeedButton" type="TextureButton" parent="HSpeed"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 49.0
margin_top = -16.0
margin_right = 97.0
margin_bottom = 34.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 8 )
expand = true
stretch_mode = 5

[node name="WSpeed" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -140.0
margin_top = -23.0
margin_right = 140.0
margin_bottom = 20.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
text = "Wolf Speed: 
Lvl 0"
align = 1
valign = 1

[node name="WSpeedButton" type="TextureButton" parent="WSpeed"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 49.0
margin_top = -16.0
margin_right = 97.0
margin_bottom = 34.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 8 )
expand = true
stretch_mode = 5

[node name="DashLength" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -140.0
margin_top = 28.0
margin_right = 140.0
margin_bottom = 71.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
text = "Dash Speed: 
Lvl 0"
align = 1
valign = 1

[node name="DashLenghtButton" type="TextureButton" parent="DashLength"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 49.0
margin_top = -16.0
margin_right = 97.0
margin_bottom = 34.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 8 )
expand = true
stretch_mode = 5

[node name="Accept" type="TextureButton" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 46.0
margin_top = -136.0
margin_right = 166.0
margin_bottom = -16.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 4 )

[connection signal="pressed" from="HSpeed/HspeedButton" to="." method="_on_HspeedButton_pressed"]
[connection signal="pressed" from="WSpeed/WSpeedButton" to="." method="_on_WSpeedButton_pressed"]
[connection signal="pressed" from="DashLength/DashLenghtButton" to="." method="_on_DashLenghtButton_pressed"]
[connection signal="pressed" from="Accept" to="." method="_on_Accept_pressed"]
